objects/SVMXC__SPM_Scheduling_Technician_Utilization__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Holds the Technician Utilization computed from Scheduling Engine on a daily basis</description>
    <fields>
        <fullName>SVMXC__Available_Time__c</fullName>
        <description>Holds the available time of the technician.</description>
        <inlineHelpText>Holds the available time of the technician.</inlineHelpText>
        <label>Available Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Minutes__c</fullName>
        <description>Time during which the technician takes a Break.</description>
        <inlineHelpText>Time during which the technician takes a Break.</inlineHelpText>
        <label>Break Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Process_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Servicemax Process</description>
        <inlineHelpText>Lookup to Servicemax Process</inlineHelpText>
        <label>Dispatch Process Id</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
        <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Process_Name__c</fullName>
        <description>Name of the Dispatch Process holding the scheduling configuration</description>
        <inlineHelpText>Name of the Dispatch Process holding the scheduling configuration</inlineHelpText>
        <label>Dispatch Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Drive_Time__c</fullName>
        <description>Holds the sum of driven time before and driven time after values</description>
        <inlineHelpText>Holds the sum of driven time before and driven time after values</inlineHelpText>
        <label>Drive Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Horizon_Date__c</fullName>
        <description>Date for which the utilization is computed</description>
        <inlineHelpText>Date for which the utilization is computed</inlineHelpText>
        <label>Horizon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Idle_Time__c</fullName>
        <description>Holds the Idle time of the technician (blank spaces on the calendar). 
Formula - (Available Time - Productive Time)</description>
        <formula>( SVMXC__Available_Time__c - SVMXC__Productive_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Holds the Idle time of the technician (blank spaces on the calendar). 
Formula - (Available Time - Productive Time)</inlineHelpText>
        <label>Idle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__JobId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Servicemax Jobs</description>
        <inlineHelpText>Lookup to Servicemax Jobs</inlineHelpText>
        <label>JobId</label>
        <referenceTo>SVMXC__SVMX_Jobs__c</referenceTo>
        <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
        <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Job_Execution_Start_Time__c</fullName>
        <description>Holds the start time of the scheduling job</description>
        <inlineHelpText>Holds the start time of the scheduling job</inlineHelpText>
        <label>Job Execution Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Non_Productive_Time_Value__c</fullName>
        <description>Holds the Non-Productive Time of the technician.</description>
        <inlineHelpText>Holds the Non-Productive Time of the technician.</inlineHelpText>
        <label>Non Productive Time Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Non_Work_Order_Events_Time__c</fullName>
        <description>Sum of duration of non work-order events</description>
        <inlineHelpText>Sum of duration of non work-order events</inlineHelpText>
        <label>Non Work Order Events Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time__c</fullName>
        <description>Holds the overhead time taken before and after the work is performed</description>
        <inlineHelpText>Holds the overhead time taken before and after the work is performed</inlineHelpText>
        <label>Overhead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Productive_Time__c</fullName>
        <description>Holds the sum of productive time.</description>
        <inlineHelpText>Holds the sum of productive time.</inlineHelpText>
        <label>Productive Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c</fullName>
        <description>Master-Details Relationship to SPM Schedul Tech Utilization Constraints table</description>
        <inlineHelpText>Master-Details Relationship to SPM Schedul Tech Utilization Constraints table</inlineHelpText>
        <label>SPM Schedul Tech Utilization Constraints</label>
        <referenceTo>SVMXC__SPM_Schedul_Tech_Utilization_Constraints__c</referenceTo>
        <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
        <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Team__c</fullName>
        <description>Technician Team</description>
        <inlineHelpText>Technician Team</inlineHelpText>
        <label>Service Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Time__c</fullName>
        <description>Holds the sum of differences of event duration with drive time</description>
        <inlineHelpText>Holds the sum of differences of event duration with drive time</inlineHelpText>
        <label>Service Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Technician</description>
        <inlineHelpText>Lookup to Technician</inlineHelpText>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>SPM Scheduling Technician Utilization</relationshipLabel>
        <relationshipName>SPM_Scheduling_Technician_Utilization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Territory__c</fullName>
        <description>Technician&apos;s Territory</description>
        <inlineHelpText>Technician&apos;s Territory</inlineHelpText>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Utilization__c</fullName>
        <description>Holds the utilization of the technician for the day.</description>
        <formula>IF((SVMXC__Available_Time__c &gt; 0),
(SVMXC__Productive_Time__c / SVMXC__Available_Time__c) * 100,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Holds the utilization of the technician for the day.</inlineHelpText>
        <label>Utilization %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Working_Minutes__c</fullName>
        <description>This is computed from Technician&apos;s WorkingHours Field. If empty then we consider Territory Business Hours. If Territory Business  Hours is also empty then we consider Company&apos;s Business Hours.</description>
        <inlineHelpText>This is computed from Technician&apos;s WorkingHours Field. If empty then we consider Territory Business Hours. If Territory Business  Hours is also empty then we consider Company&apos;s Business Hours.</inlineHelpText>
        <label>Working Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SPM Scheduling Technician Utilization</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM Scheduling Technician Utilization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>